# cute-light

./: .gitignore  README.md
applications/cute_light/: CMakeLists.txt  prj.conf
applications/cute_light/User/src/: main.cpp
boards/cute_light/: Kconfig.cute_light  Kconfig.defconfig  board.yml  cute_light-pinctrl.dtsi  cute_light.dtsi  cute_light_rp2350a_hazard3.dts  cute_light_rp2350a_m33.dts  cute_light_rp2350a_m33_mcuboot.dts  cute_light_rp2350a_m33_w.dts  cute_light_rp2350a_m33_w_mcuboot.dts
